fix contrast

--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@
     box-sizing: border-box;
 }
 :root{
-    --color: rgb(118, 118, 226);
+    --color: rgb(133, 133, 255);
     
 }
 body{
-    width: 100vw;
+    width: 1400px;
     height: auto;
     font-family: 'Lato', sans-serif;
     overflow: hidden;
@@ -24,8 +24,10 @@ h2{
     justify-content: center;
     margin-bottom: 2%;
 }
-.a, a:visited{
-    color: azure;
+.a, a:visited, a:link{
+    color: rgb(41, 9, 29);
+    text-decoration: none;
+    margin-bottom: 1%;
 }
 li,span,p{
     color: darkblue;
@@ -66,6 +68,6 @@ main .rightSide{
     grid-row: 1/2;
     width: 100%;
     height: 100vh;
-    padding: 5% 10%;
+    padding: 5% 5%;
     background-color: var(--color)
 }
